# opencflite

./: BuildCFLite  CFApplicationPreferences.c  CFArray.c  CFArray.h  CFBag.c  CFBag.h  CFBase.c  CFBase.h  CFBasicHash.h  CFBasicHash.m  CFBinaryHeap.c  CFBinaryHeap.h  CFBinaryPList.c  CFBitVector.c  CFBitVector.h  CFBuiltinConverters.c  CFBundle.c  CFBundle.h  CFBundlePriv.h  CFBundle_BinaryTypes.h  CFBundle_Internal.h  CFBundle_Resources.c  CFByteOrder.h  CFCalendar.c  CFCalendar.h  CFCharacterSet.c  CFCharacterSet.h  CFCharacterSetPriv.h  CFConcreteStreams.c  CFData.c  CFData.h  CFDate.c  CFDate.h  CFDateFormatter.c  CFDateFormatter.h  CFDictionary.c  CFDictionary.h  CFError.c  CFError.h  CFError_Private.h  (+117 more)
.github/workflows/: build.yml
branches/opencflite-476/: BuildCFLite.windows  CFArray.c  CFBase.c  CFRuntime.c  CFSet.c  CFStream.c  CFString.c  CFUniChar.c  CFVersion.c  CHANGES  configure  configure.ac
compat/: Makefile.in
examples/: Makefile.am  Makefile.in
examples/Allocator/: Allocator.vcxproj  Allocator_vs2005.vcproj  Makefile.in
examples/BundleExample/: BundleExample.c  BundleExample.vcxproj  BundleExample_vs2005.vcproj  Makefile.am  Makefile.in
examples/CFFileDescriptorExample/: CFFileDescriptorExample.c  Makefile.am  Makefile.in
examples/CFLocalServer/: Client.c  Makefile.in  Server.c
examples/CFMessagePort/: Makefile.in
examples/CFRunLoopTimerExample/: CFRunLoopTimerExample.c  CFRunLoopTimerExample.vcproj  CFRunLoopTimerExample.vcxproj  CFRunLoopTimerExample_vs2005.vcproj  Makefile.in
examples/CFTest/: Makefile.in
examples/CFTimeZoneExample/: CFTimeZoneExample.cpp  Makefile.am  Makefile.in
examples/DNSServiceMetaQuery/: DNSServiceMetaQuery.c  DNSServiceMetaQuery_vs2005.vcproj  Makefile.in
examples/DisplayURL/: Makefile.in
examples/PLConvertExample/: Makefile.in  PLConvertExample.vcxproj  plconvert.c
examples/ReadPListExample/: Makefile.in  ReadPListExample.cpp  ReadPListExample_vs2005.vcproj
examples/SimpleWebServer/: Makefile.in
examples/StringExample/: Makefile.in  StringExample.c  StringExample_vs2005.vcproj
examples/WritePListExample/: Makefile.in  WritePListExample.cpp  WritePListExample.vcproj  WritePListExample_vs2005.vcproj
icu/bin_vc2010/: WHAT_IS_THIS.txt
icu/lib/: icudt.lib  icuin.lib  icuuc.lib  libicuin.lib
icu/lib_vc2005/: icudt.lib  icuin.lib  icuuc.lib  libicuin.lib
icu/lib_vc2010/: libicuin.lib
icu/unicode/: ucoleitr.h  udata.h  uversion.h
include/: ConditionalMacros.h  Makefile.in  config.h.in
include/c99/: stdint.h
m4/: acinclude.m4
objc4/: objc.vcproj  objc.vcxproj  objc.vcxproj.filters  version.h
objc4/objcrt/: objcrt.vcproj  objcrt.vcxproj  objcrt_vs2005.vcproj
objc4/runtime/: objc-class.m
props/: common.props  common.vsprops  dll.props  release.props
pthreads/lib/: pthreadVC2.lib
pthreads/lib_vc2005/: pthreadVC2.lib
pthreads/lib_vc2010/: pthreadVC2.lib
tags/opencflite-476.19.0/: BuildCFLite  CFBundle_Resources.c  CFPlatform.c  CFRunLoopPriv.h  CFSet.c  CFString.c  (+1 more)
tests/: Makefile.in  date_test.c
trunk/: BuildCFLite.windows  CFApplicationPreferences.c  CFArray.c  CFArray.h  CFBag.h  CFBase.h  CFBasicHash.h  CFBasicHash.m  CFBinaryHeap.c  CFBinaryHeap.h  CFBuiltinConverters.c  CFBundle.c  CFBundle.h  CFBundlePriv.h  CFBundle_Internal.h  CFBundle_Resources.c  CFCalendar.c  CFCharacterSet.c  CFCharacterSet.h  CFCharacterSetPriv.h  CFConcreteStreams.c  CFData.c  CFData.h  CFDate.c  CFDate.h  CFDateFormatter.c  CFDictionary.c  CFDictionary.h  CFError.c  CFError.h  CFFileUtilities.c  CFICUConverters.c  CFICUConverters.h  CFInternal.h  CFLite.sln  CFLite_vs2005.sln  CFLocale.c  CFLocale.h  CFLocaleIdentifier.c  CFLocaleInternal.h  (+67 more)
windows/: CFLiteLib.vcproj  CFLiteLib.vcxproj  CFLiteLib_vs2005.vcproj
(+40 files in other folders)
